Refactor benchmarking scripts, restructure repo, add Dockerfile and updated requirements

--- a/common/requirements.txt
+++ b/common/requirements.txt
@@ -4,3 +4,15 @@ numpy
 pandas
 tabulate
 python-dotenv
+
+# Added for local LLM benchmarking
+# PyTorch with CUDA 12.1 support
+torch==2.3.1 --index-url https://download.pytorch.org/whl/cu121
+torchvision==0.18.1 --index-url https://download.pytorch.org/whl/cu121
+torchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu121
+transformers
+vllm
+accelerate
+tiktoken
+sentencepiece
+# xformers  # Often beneficial but can have tricky installs, optional for now
